--- a/STAT 8700 Assignment 3.Rmd
+++ b/STAT 8700 Assignment 3.Rmd
@@ -306,17 +306,39 @@ passenger.deaths <- c(734, 516, 754, 877, 814, 362, 764, 809, 223, 1066)
 death.rate <- c(0.19, 0.12, 0.15, 0.16, 0.14, 0.06, 0.13, 0.13, 0.03, 0.15)
 
 airline.deaths <- as.data.frame(cbind(years, fatal.accidents, passenger.deaths, death.rate))
+
 airline.deaths
+
+
 ```
 
 ## (a) Assume that the number of fatal accidents in each year are independent with a $Poisson(\theta)$ distribution. Using a flat prior for $\theta$, find the posterior distribution for $\theta$ based on the the 10 years of provided data. If you have a $Gamma(\alpha, \beta)$ distribution then the function \texttt{qgamma(q, shape=a, rate=b)} will return the $q$th quantile of the $Gamma(\alpha, \beta)$ distribution. Use this to find the `symmetric' 95% credible interval for $\theta$.
 
-Using a flat prior, we have $\theta \sim Gamma(1, 0)$. So our posterior distribution becomes $\theta | y \sim Gamma(1 + \sum_{i = 1}^n y_i, \sum_{i = 1}^n xi)$.
+Using a flat prior, we have $\theta \sim Gamma(1, 0)$. So our posterior distribution becomes $\theta | y \sim Gamma(1 + \sum_{i = 1}^n y_i, \sum_{i = 1}^n xi)$, where $y_i$ is the number of fatal accidents in the $i$th year, and $x_i$ is the exposure (in this case, 1 year each).
 
 ```{r}
+
+library(ggplot2)
+library(MASS)
+
+
 theta.given.y <- qgamma(c(0.025, 0.975), 
                         shape=(1 + sum(airline.deaths$fatal.accidents)), 
-                        rate=(sum(airline.deaths$death.rate)))
+                        rate=(length(airline.deaths$years)))
+
+
+x <- rgamma(100000, 
+            shape = (1 + sum(airline.deaths$fatal.accidents)), 
+            rate = length(airline.deaths$years))
+den <- density(x)
+dat <- data.frame(x = den$x, y = den$y)
+ggplot(data = dat, aes(x = x, y = y)) + 
+    geom_line() +
+    geom_vline(xintercept = theta.given.y[1]) + 
+    geom_vline(xintercept = theta.given.y[2]) +
+    theme_classic()
+
+
 ```
 
 The symmetric 95% credible interval is $(`r theta.given.y[1]`, `r theta.given.y[2]`)$.
@@ -327,15 +349,24 @@ The symmetric 95% credible interval is $(`r theta.given.y[1]`, `r theta.given.y[
 
 \pagebreak
 
-## (b) Now assume that the number of fatal accidents in each year follow independent Poisson distributions with a constant rate and an exposure in each year proportional to the number of passenger miles flown. Again using a flat prior distribution for $\theta$, determine the posterior distribution based on the data. (Estimate the number of passenger miles flown in each year by dividing the appropriate columns of table and ignoring round-off errors, death rate is per 100 million miles.) Give a 95% predictive interval for the number of fatal accidents in 1986 under the assumption that $8 \times 10^{11}$ passenger miles are flown that year.
+## (b) Now assume that the number of fatal accidents in each year follow independent Poisson distributions with a constant rate and an exposure in each year proportional to the number of passenger miles flown. Again using a flat prior distribution for $\theta$, determine the posterior distribution based on the data.  Give a 95% predictive interval for the number of fatal accidents in 1986 under the assumption that $8 \times 10^{11}$ passenger miles are flown that year.
 
 ```{r}
 miles.flown <- (airline.deaths$passenger.deaths / airline.deaths$death.rate) * 100000000
-miles.flown
 airline.deaths$miles.flown <- miles.flown
+airline.deaths
+
+theta.given.y <- qgamma(c(0.025, 0.975), 
+                       shape = sum(1 + airline.deaths$fatal.accidents), 
+                       rate = airline.deaths$miles.flown[1])
+
+theta.given.y
+
+plot(qpois(p=seq(0, 1, by=0.001), lambda = 1/800000000), type="l")
 
 ```
 
+I'm not seeing this one. The numbers keep ending up too big or too small. Definitely missing something here. :/
 
 \pagebreak
 
@@ -343,9 +374,24 @@ airline.deaths$miles.flown <- miles.flown
 ## (c) Repeat (a) above, replacing 'fatal accidents' with 'passenger deaths.'
 
 ```{r}
+
+
 theta.given.y <- qgamma(c(0.025, 0.975), 
                         shape=(1 + sum(airline.deaths$passenger.deaths)), 
-                        rate=(airline.deaths$death.rate))
+                        rate=(length(airline.deaths$years)))
+
+x <- rgamma(100000, 
+            shape = (1 + sum(airline.deaths$passenger.deaths)), 
+            rate = length(airline.deaths$years))
+den <- density(x)
+dat <- data.frame(x = den$x, y = den$y)
+ggplot(data = dat, aes(x = x, y = y)) + 
+    geom_line() +
+    geom_vline(xintercept = theta.given.y[1]) + 
+    geom_vline(xintercept = theta.given.y[2]) +
+    theme_classic()
+
+
 ```
 
 The symmetric 95% credible interval is $(`r theta.given.y[1]`, `r theta.given.y[2]`)$.
@@ -354,9 +400,9 @@ The symmetric 95% credible interval is $(`r theta.given.y[1]`, `r theta.given.y[
   $\blacksquare$
 \end{flushright}
 
+\pagebreak
+
 ## (d) Repeat (b) above, replacing 'fatal accidents' with 'passenger deaths.'
 
+Since I couldn't figure out b), I'm not getting this one either. 
 
-\begin{flushright}
-  $\blacksquare$
-\end{flushright}
